# dxx-rebirth

./: .cvsignore  .gitattributes  .gitignore  .project  .travis.yml  AUTHORS  Brewfile  CHANGELOG.txt  COPYING  COPYING.txt  ChangeLog  ChangeLog-old  D1X.make  D2X.make  DXX-COMPILE.TXT  DXX-ChangeLog  DXX-README.TXT  Dockerfile  EMSCRIPTEN.md  INSTALL  INSTALL.markdown  INSTALL.txt  ISSUE_TEMPLATE.md  Info.plist.in  MVEPlayer-Info.plist  Makefile  Makefile.am  Makefile.in  NEWS  README  README.RPi  README.md  README.txt  README.utils  RELEASE-NOTES.txt  SConstruct  TODO  acconfig.h  aclocal.m4  autogen.sh  (+47 more)
2d/: 2dsline.c  Makefile.am  Makefile.in  bitblt.c  bitmap.c  bitmap.h  box.c  canvas.c  circle.c  clip.h  diff  disc.c  font.c  gpixel.c  ibitblt.c  line.c  linear.asm  linear.h  makefile  palette.c  pcx.c  pixel.c  poly.c  rect.c  rle.c  scale.c  scalea.asm  scalea.h  scalec.c  tmerge.c  tmerge_a.asm
arch/: Makefile.am  Makefile.in  dos_dpmi.c  dos_findfile.c  dos_init.c  dos_ipx.c  dos_modex.asm  dos_timer.asm  dos_tweak.inc  dos_vesa.c  dos_vgaregs.inc  linux_findfile.c  linux_init.c  linux_ipx_bsd.c  linux_ipx_lin.c  linux_ipx_udp.c  linux_net.c  makefile  sdl_init.c  sdl_timer.c
arch/carbon/: SDL_main.c  conf.h  descent.r  findfile.c  gui.c  messagebox.c
arch/cocoa/: d1x-rebirth.icns  d2x-rebirth.icns  tool_bundle.py
arch/dos/: Makefile.am  Makefile.in  bcd.c  cdrom.c  digi.c  digiallg.c  digimm.c  disk.c  dosgr.c  dpmi.c  findfile.c  gr.c  init.c  ipx.c  ipx.h  joy2.asm  joyc.c  joydefs.c  key.c  key_arch.c  midiallg.c  modex.asm  mono.c  mono.h  mouse.c  rbaudio.c  serial.c  sgrep.out  timer.asm  tweak.inc  vesa.c  vgaregs.inc
arch/ggi/: Makefile.am  Makefile.in  event.c  gr.c  init.c  key.c  mouse.c
arch/include/: Makefile.am  digi_audio.h  digi_mixer.h  digi_mixer_music.h  event.h  gp2x.h  joy.h  jukebox.h  key.h  messagebox.h  mixmusic.h  mouse.h  window.h
arch/linux/: Makefile.am  Makefile.in  alsadigi.c  arch_ip.cpp  findfile.c  hmiplay.c  hmistub.c  init.c  ipx.c  ipx_bsd.c  ipx_kali.c  ipx_lin.c  ipx_mcast4.c  ipx_udp.c  joydefs.c  joystick.c  linuxnet.c  makefile  messagebox.c  mono.c  music.h  netdrv_ipx.c  netdrv_kali.c  serial.c  stHqFIq1  timer.c  ukali.c
arch/ogl/: Makefile.am  Makefile.in  glx.c  gr.c  internal.h  loadgl.h  makefile  ogl.c  ogl_init.h  sdlgl.c  wgl.c
arch/sdl/: Makefile.am  Makefile.in  cdrom.c  clipboard.c  digi.c  digi_audio.c  digi_mixer.c  digi_mixer_music.c  event.c  gr.c  init.c  joy.c  joydefs.c  jukebox.c  key.c  key_arch.c  key_arch.h  makefile  mixdigi.c  mixmusic.c  mouse.c  rbaudio.c  timer.c  window.c
arch/svgalib/: Makefile.am  Makefile.in  event.c  gr.c  init.c  key.c  mouse.c
arch/win32/: Makefile.am  Makefile.in  arch_ip.cpp  d1x-rebirth.rc  d1x.rc  d1x_res.rc  d1xr.res  d2xr.res  debug.cpp  digi.c  findfile.c  glinit.c  gr.c  hmpfile.c  init.c  ipx.c  ipx_drv.h  ipx_mcast4.c  ipx_udp.c  ipx_win.c  joydefs.c  joyhh.c  key.c  key_arch.c  key_arch.h  makefile  messagebox.c  midi.c  mingw_init.c  mono.c  mouse.c  mouse.h  netdrv_ipx.c  palw32.c  pch.cpp  scene.cpp  serial.c  texture.cpp  timer.c  win32.c  (+3 more)
include/: 3d.h  CON_console.h  DT_drawtext.h  Makefile.am  alloca.h  arch.h  archinc.h  args.h  bcd.h  byteswap.h  cfile.h  cmd.h  compare.h  console.h  d.bat  d1x.xpm  d_conv.h  d_delay.h  d_glob.h  d_io.h  d_slash.h  descent.xpm  dl_list.h  dtypes.h  dxxerror.h  error.h  fileutil.h  findfile.h  func.h  gr.h  grdef.h  hash.h  hmp.h  hmp2mid.h  ibitblt.h  iff.h  internal.h  interp.h  ipx.h  ipx_drv.h  (+40 more)
include/bak/: wtypes.h
include/editor/: centers.h  editor.h  ehostage.h  eobject.h  esegment.h  eswitch.h  info.h  kdefs.h  kfuncs.h  macro.h  meddraw.h  medlisp.h  medmisc.h  medrobot.h  medsel.h  medwall.h  objpage.h  seguvs.h  texpage.h
include/tracker/: tracker.h
input/: Makefile.am  Makefile.in  dos_joy2.asm  dos_joyc.c  dos_joydefs.c  dos_key.c  dos_mouse.c  ggi_event.c  ggi_init.c  ggi_key.c  ggi_mouse.c  linux_joydefs.c  linux_joystick.c  sdl_event.c  sdl_joy.c  sdl_joydefs.c  sdl_key.c  sdl_mouse.c  svgalib_event.c  svgalib_init.c  svgalib_key.c  svgalib_mouse.c  win32_joydefs.c  win32_joyhh.c
input/ggi/: Makefile.am  event.c  (+3 more)
libmve/: .cvsignore  Makefile.am  Makefile.in  decoder16.c  decoder8.c  decoders.h  mve_main.c  mvelib.c  mveplay.c
main/: Makefile.am  Makefile.in  Makefile.mveplay  ai.c  ai.h  ai2.c  aipath.c  aistruct.h  altsound.c  altsound.h  args.c  automap.c  automap.h  ban.c  ban.h  bm.c  bm.h  bmread.c  bmread.h  cdplay.c  cdplay.h  cdrom.h  clock.c  cmd.c  cntrlcen.c  cntrlcen.h  collide.c  collide.h  command.c  command.h  compbit.h  config.c  config.h  console.c  console.h  controls.c  controls.h  credits.c  credits.h  crypt.c  (+211 more)
maths/: Makefile.am  Makefile.in  fix.asm  fixc.c  makefile  rand.c  tables.c  vecmat.c  vecmata.asm
misc/: Makefile.am  Makefile.in  args.c  byteswap.c  byteswap.h  checker.c  compare.c  d_delay.c  d_glob.c  d_io.c  d_slash.c  dl_list.c  dos_disk.h  error.c  errtest.c  fileutil.c  fileutil.h  hash.c  hmp.c  hmp2mid.c  ignorecase.c  makefile  parsarg.c  parsarg.h  physfsx.c  pngfile.c  strio.c  strutil.c
sound/: Makefile.am  Makefile.in  dos_cdrom.c  dos_digi.c  sdl_cdrom.c  sdl_digi.c
texmap/: Makefile.am  Makefile.in  makefile  ntmap.c  scanline.c  scanline.h  texmapl.h  tmap_flt.asm  tmap_inc.asm  tmap_lin.asm  tmap_ll.asm  tmap_per.asm  tmapfade.asm  tmapflat.c  tmappent.S  tmapppro.S
ui/: Makefile  Makefile.am  Makefile.in  barbox.c  button.c  checkbox.c  dialog.c  file.c  func.c  gadget.c  harderr.c  icon.c  inputbox.c  keypad.c  keypress.c  keytrap.c  lfile.c  listbox.c  makefile  medfunc.c  menu.c  menubar.c  message.c  mouse.c  number.c  popup.c  radio.c  scroll.c  ui.c  uidraw.c  userbox.c  window.c
utilities/: .cvsignore  Makefile.am  Makefile.in  SConstruct  extractD1Data.cpp  hogcreate.1  hogcreate.c  hogextract.1  hogextract.c  mvlcreate.c  mvlextract.c  tex2txb.1  tex2txb.c  txb2tex.1  txb2tex.c
video/: Makefile.am  Makefile.in  dos_gr.c  ggi_gr.c  ogl.c  ogl_glx.c  ogl_gr.c  ogl_sdl.c  ogl_wgl.c  sdl_gr.c  svgalib_gr.c
(+1736 files in other folders)
